# search-engine

./: CMakeLists.txt
Files/files1/: file1.txt
Project/: CMakeLists.txt
Project/BoostTests/: CMakeLists.txt  testConverterJSON.cpp  testInvertedIndex.cpp
Project/configuration/: config.h  config.h.in
Project/include/: Configuration.h  ConverterJSON.h  Exceptions.h  InvertedIndex.h  SearchServer.h
Project/src/: Configuration.cpp  ConverterJSON.cpp  Exceptions.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
